--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ airflow/logs/
 airflow/airflow.db
 airflow/airflow.cfg
 airflow/simple_ath_mananger_passwords.json.generated
+airflow/*.json.generated
 
 # Local configs
 *.lock
